added basic settings