@@ -1,10 +1,10 @@
 package com.aska.fed.actions;
 
 import com.aska.fed.GitBookSummaryGenerator;
+import com.aska.fed.settings.PluginSettingsConfig;
 import com.intellij.openapi.actionSystem.AnAction;
 import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.project.Project;
-import org.jetbrains.annotations.SystemIndependent;
 
 import java.nio.file.*;
 import java.util.*;
@@ -16,11 +16,12 @@ public class GenerateAction extends AnAction {
 
     public void actionPerformed(AnActionEvent event) {
         Project project = event.getProject();
-        @SystemIndependent String basePath = Objects.requireNonNull(project).getBasePath();
-        Path projectRoot = Paths.get(Objects.requireNonNull(basePath));
+        PluginSettingsConfig settings = PluginSettingsConfig.getInstance(project);
+        Path docRootPath = Path.of(settings.docRootPath);
+        Path projectRootPath = Path.of(settings.projectRootPath);
 
-        GitBookSummaryGenerator component = project.getComponent(GitBookSummaryGenerator.class);
-        component.setProjectRoot(projectRoot);
-        component.generateSummaryFile();
+        Objects.requireNonNull(project)
+                .getComponent(GitBookSummaryGenerator.class)
+                .generateSummaryFile(docRootPath, projectRootPath);
     }
 }
